<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ChekNumberDialogStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_margin="@dimen/_15sdp">

        <TextView
            android:id="@+id/edit_number"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/raqamni_o_zgartirish"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/text"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/boshqa_raqam_kiritishni_xohlaysizmi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/edit_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/number"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/_998996349564"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/edit_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42" />

        <TextView
            android:id="@+id/info_text"
            style="@style/TextColor"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/agar_raqam_to_g_ri_kiritilgan_bo_lsa_iltimos_tasdiqlash_ko_di_kelishini_kuting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/edit_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.67" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit"
            style="@style/MaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/o_zgartirish"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dismiss"
            style="@style/MaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/yopish"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>