<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ChekNumberDialogStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_130sdp"
        android:layout_margin="@dimen/_15sdp">

        <TextView
            android:id="@+id/number_is_correct"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/raqamingiz_to_g_rimi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/number"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/_998996349564"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/number_is_correct"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit"
            style="@style/MaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/o_zgartirish"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes"
            style="@style/MaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/ha"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>