<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.singup.SignUpFragment">

    <!--Action bar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        style="@style/ActionBarStyle"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/action_bar_title"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_3sdp"
            android:text="@string/royhatdan_otish"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/done"
            style="@style/TintColor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:src="@drawable/ic_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Logo-->
    <ImageView
        android:id="@+id/logo"
        style="@style/LogoImage"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_83sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Greeting-->
    <TextView
        android:id="@+id/greeting"
        style="@style/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/hush_kelibsiz"
        android:textSize="@dimen/_40ssp"
        app:layout_constraintBottom_toTopOf="@id/TIL_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <!--Input phone number-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_phone_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:hint="@string/telefon_raqami"
        app:boxStrokeColor="@color/text_color_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting">

        <uz.codial6.codial.utils.MaskedEditText.MaskedEditText
            android:id="@+id/MET_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/maskEditTextHint"
            android:inputType="phone"
            android:typeface="monospace"
            app:allowed_chars="1234567890"
            app:keep_hint="true"
            app:mask="+998 (##) ###-##-##" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Progress bar-->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>