<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.singup.UserDataFragment">

    <!--Action bar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        style="@style/ActionBarStyle"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/action_bar_title"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_3sdp"
            android:text="@string/foydalanuvchi_ma_lumotlari"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/done"
            style="@style/TintColor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:src="@drawable/ic_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Image-->
    <androidx.cardview.widget.CardView
        android:id="@+id/image_placeholder"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar"
        app:layout_constraintVertical_bias="0.1">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            style="@style/ImageViewBackground"/>

    </androidx.cardview.widget.CardView>

    <!--Name-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:hint="@string/ismingiz"
        app:boxStrokeColor="@color/text_color_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_placeholder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TIE_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_regular" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Surname-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_surname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:hint="@string/familiyangiz"
        app:boxStrokeColor="@color/text_color_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TIL_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TIE_surname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_regular" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>